# backtest-as-a-service

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  start.sh
backtester/: admin_dashboard.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
bars/: admin.py  api.py  ingestion.py  models.py  tasks.py
bars/management/commands/: ingest_bars.py
bars/migrations/: 0001_initial.py  0002_timescaledb_hypertable.py
bars/tests/: test_ingestion.py
runs/: admin.py  api.py  engine.py  models.py  persistence.py  sandbox.py  serializers.py  sweeps.py  tasks.py  urls.py  views.py
runs/management/commands/: install_builtin_strategies.py
runs/migrations/: 0001_initial.py  0002_timescaledb_hypertable.py  0003_parametersweep_backtestrun_sweep_and_more.py
runs/static/runs/: admin-overrides.css
runs/strategies/: builtin.py
runs/tests/: test_api.py  test_cleanup.py  test_engine.py  test_sandbox.py  test_sweeps.py  test_tasks.py
templates/: base.html  landing.html
templates/admin/: index.html
templates/runs/: detail.html  list.html  sweep_detail.html  sweep_list.html
